vpc.tf
# Criar VPC
resource "aws_vpc" "mlflow_vpc" {
  cidr_block = "10.0.0.0/16"
}

# Criar sub-redes
resource "aws_subnet" "example_subnet_a" {
  vpc_id            = aws_vpc.mlflow_vpc.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-east-1a"
}

resource "aws_subnet" "example_subnet_b" {
  vpc_id            = aws_vpc.mlflow_vpc.id
  cidr_block        = "10.0.2.0/24"
  availability_zone = "us-east-1b"
}

# Criar Internet Gateway
resource "aws_internet_gateway" "example_igw" {
  vpc_id = aws_vpc.mlflow_vpc.id
}

# Criar rota para a Internet Gateway
resource "aws_route_table" "example_route_table" {
  vpc_id = aws_vpc.mlflow_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.example_igw.id
  }
}

resource "aws_route_table_association" "example_subnet_a_assoc" {
  subnet_id      = aws_subnet.example_subnet_a.id
  route_table_id = aws_route_table.example_route_table.id
}

resource "aws_route_table_association" "example_subnet_b_assoc" {
  subnet_id      = aws_subnet.example_subnet_b.id
  route_table_id = aws_route_table.example_route_table.id
}
